--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
 asgiref==3.8.1
+certifi==2024.8.30
+cloudinary==1.41.0
 Django==5.1.3
+pillow==11.0.0
+python-decouple==3.8
+six==1.16.0
 sqlparse==0.5.2
 typing_extensions==4.12.2
+urllib3==2.2.3
+
+
+
+# Time: 00:56:15
